# TTSGen

./: .gitignore  README.md  build.py  gui.py  main.py  pyproject.toml  requirements.txt
