[project]
name = "kokoro-tts"
version = "0.1.0"
description = "High-quality, offline TTS with voice modulation for YouTube Shorts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kokoro-onnx>=0.3.0",
    "customtkinter>=5.2.0",
    "misaki[en]>=0.5.0",
    "soundfile>=0.12.1",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
